Fixed the gaps in the trainee page

--- a/swdn-frontend/src/index.css
+++ b/swdn-frontend/src/index.css
@@ -260,7 +260,7 @@
     padding: 1rem;
     color: white;
     width: 25vw;
-    height: 24vh;
+    height: 12vh;
     background-color: black;
 }
 
@@ -319,14 +319,29 @@
     object-fit: cover;
 }
 
+.cat-long {
+    width: 15vw;
+    height: 90vh;
+    object-fit: cover;
+}
+
 .nav-centering-left {
     width: 30vw;
     text-align: left;
+    color: white;
 }
 
 .nav-centering-right {
     width: 30vw;
     text-align: right;
+}
+
+.traineemeetings {
+    margin: 0;
+    color: white;
+    width: 25vw;
+    height: 53vh;
+    background-color: black;
 }
 
 @media (prefers-color-scheme: light) {
